# bg-noise-reduction

./: .cargoignore  .gitignore  CLAUDE.md  Cargo.toml  DOC.md  LICENSE-APACHE  PLAN_WASM.md  README.md  build.sh  package.json  test_audio.py  vercel.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
web/src/: App.css  App.tsx
web/src/components/: Controls.tsx  Waveform.tsx
web/src/hooks/: useNoiseReduction.ts
web/src/utils/: audio.ts
