[package]
name = "bg-noise-reduction-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core audio noise reduction library using spectral subtraction"

[dependencies]
rustfft.workspace = true
num-complex.workspace = true
