[package]
name = "bg-noise-reduction-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for audio noise reduction"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bg-noise-reduction-core = { path = "../core" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_error_panic_hook"]
